. fix text overflow issue for view mode of number type

--- a/src/main/webapp/less/CustomFilterNumber.less
+++ b/src/main/webapp/less/CustomFilterNumber.less
@@ -73,6 +73,8 @@
 				color:#fff;
 				background-color: #00a4a8;
 				padding:3px;
+				min-width: 100px;
+				display: inline-block;
 			}
 		}
 	}
